          well as their base type (if applicable). This means if you wish to check for an ESType you can now use
          isinstance(). Checking for the metaclass will no longer work.
        - Standalone functions create_es_type() and is_analyzed() have been removed from es_types.py and change to
          ESType.create() and ESType.is_analyzed() (note these are class methods)
        - Elasticsearch removed the generic Number() type so calls to ESType.create() will convert string-like numbers
          to Float() (which is technically what happened anyway but now they will be ESType).
        - `limit()` now accepts a start parameter. Can be used like `.limit(start, num_results)` or just
          `.limit(num_results)`. This is the preferred way to limit the result-set. (See changes to `all()`
        - results_per_page is no longer supported by calls to `all()`. `start` and `size` still work but should be
          considered deprecated. `limit()` is the preferred way to limit the results
        - mapper now supports an attribute on models __custom_mapping__ to override defaults
        - QDSL calls "bool", "filter" and "range" now have an appended "_" so they are now "bool_", "filter_" and
          "range_" respectively to prevent collisions with built-in python names if imported into the namespace
        - Added `query()` and `filter()` methods to VWBase that can chain QDSL fragments directly. Note that `bool`
          commands in QDSL passed to these methods will be nested.


    REMOVED FEATURES:
        - The experimental relationship features are removed as they were never completed. Raw queries can be
          used to make use of relationship functionality internal to ElasticSearch. The Join type is implemented
          in ESType. Future versions may try to create Velociwrapper objects from Join relationships
        - create_es_type() function is removed and replaced by ESType.create()